- Dockerize the app - Create feature test for auth controller
